# g4numi

./: .gitignore  CMakeLists.txt  CreateInvXS.C  CreateInvXS_hA.C  CreatePlots.C  CreateYields.C  CreateYields_hA.C  G4Nevents.mac  GNUmakefile  GNUmakefileNA49  GNUmakefile_hide  HadTest.C  Linkdef.h  Linkdef2.h  LinkdefModern.h  NA49.in  NuBeam_example.mac  ProcessG4NuMI.py  ProcessG4NuMI_localprod.py  README_CMAKEBUILD  build_instructions.txt  compare_mc_reweight_files.py  custom_g4_environment.sh  g4na49  g4na49.cc  g4na49_condor.sh  g4na49_jobsub  g4numi  g4numi.cc  g4numi_environment.sh  g4numi_grid_submit.sh  g4numi_howTo.txt  g4numi_job.sh  g4numi_job_localprod.sh  g4numi_setup_script.sh  hadron_production_example.mac  hadronic_lists.gmk  make_mcreweight_files.py  makemacro.py  muon.mac  (+18 more)
dataProducts/: CMakeLists.txt  Edep_t.cc  Edep_t.hh  absbkgtuple_t.cc  absbkgtuple_t.hh  classes.h  classes_def.xml  data_t.hh  dkmeta.cc  dkmeta.h  draytupleMIB_t.cc  draytupleSPB_t.hh  hadmmtuple_t.cc  target_exit_t.hh  zptuple_t.cc  zptuple_t.hh
exec/: CMakeLists.txt  g4na49.cc  g4numi.cc
include/: CMakeLists.txt  Edep_t.hh  NA49Analysis.hh  NA49CheckVolumeSD.hh  NA49Config.hh  NA49DetectorConstruction.hh  NA49DetectorMessenger.hh  NA49EventAction.hh  NA49EventActionMessenger.hh  NA49PhysicsList.hh  NA49PhysicsListMessenger.hh  NA49PrimaryGeneratorAction.hh  NA49RunAction.hh  NA49StackingAction.hh  NA49StackingMessenger.hh  NA49TargetSD.hh  NA49Targets.hh  NA49TrackInfo.hh  NA49TrackingAction.hh  NtpMuon.hh  NumiAnalysis.hh  NumiDataInput.hh  NumiDecayPipeMagneticField.hh  NumiDetectorConstruction.hh  NumiDetectorMessenger.hh  NumiEventAction.hh  NumiFluctuation.hh  NumiHornSpiderSupport.hh  NumiImpWeight.hh  NumiMagneticField.hh  NumiMuIonisation.hh  NumiNuWeight.hh  NumiParticleCode.hh  NumiPrimaryGeneratorAction.hh  NumiPrimaryMessenger.hh  NumiRunAction.hh  NumiRunActionMessenger.hh  NumiRunManager.hh  NumiStackingAction.hh  NumiSteppingAction.hh  (+16 more)
macros/: CMakeLists.txt  G4Nevents_sample.mac  absbkg_example.mac  bash_copy.sh  bash_edit.sh  run_me_target.mac  template.mac  template_ME.mac  template_target_exit.mac  vis.mac
plot/: CMakeLists.txt  G4numiNtp.cxx  G4numiNtp.hh  compare_flux.C
src/: CMakeLists.txt  Edep_t.cc  NA49Analysis.cc  NA49CheckVolumeSD.cc  NA49Config.cc  NA49DetectorConstruction.cc  NA49DetectorMessenger.cc  NA49EventAction.cc  NA49EventActionMessenger.cc  NA49PhysicsList.cc  NA49PhysicsListMessenger.cc  NA49PrimaryGeneratorAction.cc  NA49RunAction.cc  NA49StackingAction.cc  NA49StackingMessenger.cc  NA49TargetSD.cc  NA49TrackInfo.cc  NA49TrackingAction.cc  NtpMuon.cc  NumiAnalysis.cc  NumiBaffle.cc  NumiDataInput.cc  NumiDecayPipe.cc  NumiDecayPipeMagneticField.cc  NumiDetectorConstruction.cc  NumiDetectorMessenger.cc  NumiEventAction.cc  NumiFluctuation.cc  NumiHadronAbsorber.cc  NumiHorn1.cc  NumiHorn2.cc  NumiHornSpiderSupport.cc  NumiHorns.cc  NumiImpWeight.cc  NumiKelvinFunctions.cc  NumiMagneticField.cc  NumiMaterials.cc  NumiMuIonisation.cc  NumiNOvATarget.cc  NumiNuWeight.cc  (+30 more)
studies/: CMakeLists.txt  G4MinervaPionIXS.cc  G4MinervaPionIXS.hh  G4MinervaProtonIXS.cc  G4MinervaProtonIXS.hh  NumiKelvinFunctions.hh  notes.txt
tmpSolution/: libstdc++.so.6.0.10
ups/: autobuild.sh  bootstrap.sh  build_numi-beam-sim-g4numi.sh  product_deps
